work on proposals and editor